# AnomaVision

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.api  Dockerfile.api.np  Dockerfile.base  Dockerfile.ui  LICENSE  README.md  anomavision_downloader.py  anomavision_gui_pyqt5.py  anomavision_gui_tkinter.py  app.py  compare_with_anomalib.py  config.yml  detect.py  eval.py  export.py  fastapi_app.py  main.py  padim_example.ipynb  pyproject.toml  quick_benchmark.py  requirements-api.txt  requirements-ui.txt  requirements.txt  setup.py  sift.py  test_module.py  train.py  usage_example.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  issue-triage.yml  publish.yml
Docker/: Dockerfile  Dockerfile.api  Dockerfile.ui
anodet/: __init__.py  config.py  feature_extraction.py  general.py  mahalanobis.py  padim.py  padim_lite.py  patch_core.py  test.py  utils.py
anodet/datasets/: base.py  cam_dataset.py  dataset.py  mqtt_dataset.py  mvtec_dataset.py  tcp_dataset.py  video_dataset.py  wrapper_dataset.py
anodet/inference/: modelType.py  model_wrapper.py
anodet/inference/model/: wrapper.py
anodet/inference/model/backends/: __init__.py  onnx_backend.py  openvino_backend.py  tensorrt_backend.py  torch_backend.py  torchscript_backend.py
anodet/sampling_methods/: kcenter_greedy.py  sampling_def.py
anodet/visualization/: __init__.py  boundary.py  frame.py  heatmap.py  highlight.py  utils.py
anomavision/: __init__.py  cli.py  detect.py  eval.py  export.py  general.py  mahalanobis.py  padim.py  padim_lite.py  train.py  utils.py
anomavision/datasets/: MQTTSource.py  StreamDataset.py  StreamSource.py  StreamSourceFactory.py  TCPsource.py  VideoSource.py  WebcamSource.py  dataset.py
anomavision/inference/model/backends/: __init__.py  onnx_backend.py  torch_backend.py  torchscript_backend.py
anomavision/static/AnomaVision/: __init__.py  utils.py
anomavision/static/AnomaVision/visualization/: __init__.py  boundary.py  frame.py  heatmap.py  highlight.py  utils.py
apps/: anomavision_gui_tkinter.py  api.py  db.py  inference_engine.py  ui.py
apps/api/: fastapi_app.py  fastapi_app_np.py
apps/ui/: gradio_app.py  run_app.py  streamlit_app.py
docs/: api.md  benchmark.md  cli.md  config.md  contributing.md  fastapi_backend.md  index.md  installation.md  quickstart.md  troubleshooting.md
onnxruntime/: CMakeLists.txt  main.cpp
onnxruntime_cpp/: oop_anomaly_detector.cpp  oop_anomaly_detector.py
pipelines/: job_training.yml  sync2github.yml
scripts/: server_tcp.py
tests/: conftest.py  test_all_formats.py  test_backends.py  test_datasets.py  test_export_load_model.py  test_exporter.py  test_feature_extraction.py  test_inference_utils.py  test_mahalanobis.py  test_padim.py  test_padim_lite.py  test_torch_backend_pth.py
