[tool.poetry]
name = "AnomaVision"
version = "2.0.0"
description = "Deep learnIng Anomaly Detection EnvironMent [AnomaVision]..."
authors = ["Deep Knowledge <Deepp.Knowledge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Target Python 3.12
python = ">=3.12,<3.13"


numpy = ">=1.26,<2"
matplotlib = "^3.8.3"
onnx = ">=1.16,<1.18"
onnxruntime-gpu = ">=1.20"
# or: onnxruntime = ">=1.20"  (if CPU only)
openvino-dev = ">=2024.4"


# Core scientific stack (NumPy 2 compatible)
pandas = "^2.2.2"

# Visualization / utils


easydict = "1.13"
py-cpuinfo = "^9.0.0"
psutil = "^5.9.8"
gitpython = "3.1.42"
albumentations = "1.4.0"
pycocotools = "2.0.7"
ipython = "^8.24"          # 3.12-compatible IPython
uvicorn = "^0.34.3"
python-multipart = "^0.0.20"

# Testing / tooling
pytest = "8.0.2"
black = "24.2.0"
flake8 = "7.0.0"
pre-commit = "3.6.2"
tox = "4.13.0"



torch = { version = "2.4.0+cu121", source="torch" }
torchvision = { version = "0.19.0+cu121", source="torch" }
torchaudio = { version = "2.4.0+cu121", source="torch" }

# OpenCV
opencv-python = [
  { version = "^4.6.0", markers = "sys_platform == 'win32'" },
  { version = "4.10.0.82", markers = "sys_platform == 'linux'" }
]
[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"