[tool.poetry]
name = "anomavision"
version = "3.0.13"  # Major version bump for breaking change
description = "Advanced Anomaly Detection Environment - Deep learning library for state-of-the-art anomaly detection algorithms"
authors = ["Deep Knowledge <Deepp.Knowledge@gmail.com>"]
readme = "README.md"

license = "MIT"
keywords = ["anomaly", "vision", "computer-vision", "anomaly-detection","PaDim"]
homepage = "https://github.com/DeepKnowledge1"
repository = "https://github.com/DeepKnowledge1/AnomaVision"
documentation = "https://github.com/DeepKnowledge1/AnomaVision/wiki"


packages = [
    {include = "anomavision"},
    {include = "anodet"},  # Backward compatibility layer
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "3.8.3"
numpy = "1.26.4"
openvino-dev = "2023.0"
easydict = "1.13"
onnx = "^1.15.0"
onnxruntime-gpu = "^1.15.0"


torch = { version = "2.0.1+cu118", source="torch" }
torchvision = { version = "0.15.2+cu118", source="torch" }
torchaudio = { version = "2.0.2+cu118", source="torch" }

opencv-python = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
black = "24.2.0"
flake8 = "7.0.0"
pre-commit = "3.6.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
